--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -22,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:alpha=".5"
+        android:visibility="gone"
         android:layout_above="@id/layoutDots"
         android:background="@android:color/black" />
 
@@ -30,10 +31,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:background="@null"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="20dp"
         android:text="@string/next"
-        android:textColor="@android:color/black" />
+        android:gravity="center"
+        android:fontFamily="@fonts/Lato_Regular"
+        android:drawableEnd="@drawable/ic_keyboard_arrow_right"
+        android:textColor="@color/colorPrimaryDark" />
 
     <Button
         android:id="@+id/btn_skip"
