--- a/app/src/main/res/layout/activity_splash_activity.xml
+++ b/app/src/main/res/layout/activity_splash_activity.xml
@@ -3,43 +3,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorPrimaryDark"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".activities.splash_activity.SplashActivity">
 
     <LinearLayout
+        android:id="@+id/ll_center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:id="@+id/ll_center"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/intelehealth_i_icon_only"/>
+            android:layout_gravity="center"
+            android:src="@drawable/intelehealth_i_icon_only" />
 
-        <ImageView
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:visibility="gone"
-            android:src="@drawable/ic_covid"/>
+            android:layout_marginTop="20dp"
+            android:text="@string/intelesafe"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            app:fontFamily="@fonts/Lato-Regular"
+            android:textSize="28sp" />
 
     </LinearLayout>
-
-<!--    <TextView-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Intelehealth"-->
-<!--        android:textSize="20sp"-->
-<!--        android:textColor="@color/white"-->
-<!--        android:layout_marginTop="20dp"-->
-<!--        android:layout_centerHorizontal="true"-->
-<!--        android:layout_below="@+id/ll_center"/>-->
-
 
 </RelativeLayout>
