Signup - default value set to India.

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -35,7 +35,7 @@
 
 
     <string-array name="countries">
-        <item>Select Country</item>
+<!--        <item>Select Country</item>-->
         <item>India</item>
        <!-- <item>United States</item>
         <item>Philippines</item>-->
