--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -137,6 +137,7 @@
 
 
                         <TextView
+                            android:id="@+id/Help_Text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/if_you_get_much_sicker_please_call_your_nearest_doctor_020_26127394"
@@ -146,6 +147,17 @@
                             android:textStyle="bold"
                             android:padding="@dimen/padding_card"
                             />
+
+                        <TextView
+                            android:id="@+id/Help_Watsapp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/Help_Text"
+                            android:hint="Click here to send a Watsapp message"
+                            android:paddingStart="20sp"
+                            android:layout_marginBottom="15sp"
+                            android:textStyle="bold"
+                            android:textSize="20sp"/>
 
                     </RelativeLayout>
                 </android.support.v7.widget.CardView>
