Home - WhatsApp icon added.

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -148,15 +148,20 @@
                             android:padding="@dimen/padding_card"
                             />
 
-                        <TextView
+                        <Button
                             android:id="@+id/Help_Watsapp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_below="@+id/Help_Text"
                             android:hint="Click here to send a WhatsApp message"
-                            android:paddingStart="20sp"
+                            android:paddingHorizontal="20sp"
                             android:layout_marginBottom="15sp"
                             android:textStyle="bold"
+                            android:background="@android:color/transparent"
+                            android:drawableStart="@drawable/ic_icons8_whatsapp"
+                            android:gravity="start|center"
+                            android:layout_marginStart="10sp"
+                            android:drawablePadding="10sp"
                             android:textSize="20sp"/>
 
                     </RelativeLayout>
