--- a/app/src/main/res/layout/content_visit_summary.xml
+++ b/app/src/main/res/layout/content_visit_summary.xml
@@ -538,7 +538,7 @@
                     android:padding="@dimen/padding_card"
                     />
 
-                <TextView
+                <Button
                     android:id="@+id/Help_Watsapp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -547,7 +547,13 @@
                     android:paddingStart="20sp"
                     android:layout_marginBottom="15sp"
                     android:textStyle="bold"
-                    android:textSize="20sp"/>
+                    android:textSize="20sp"
+                    android:paddingHorizontal="20sp"
+                    android:background="@android:color/transparent"
+                    android:drawableStart="@drawable/ic_icons8_whatsapp"
+                    android:gravity="start|center"
+                    android:layout_marginStart="10sp"
+                    android:drawablePadding="10sp" />
 
             </RelativeLayout>
         </android.support.v7.widget.CardView>
