--- a/app/src/main/res/layout/content_visit_summary.xml
+++ b/app/src/main/res/layout/content_visit_summary.xml
@@ -555,6 +555,8 @@
                     android:layout_marginStart="10sp"
                     android:drawablePadding="10sp" />
 
+                <!-- Icon Credits:- <a target="_blank" href="https://icons8.com/icons/set/whatsapp">WhatsApp icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
+
             </RelativeLayout>
         </android.support.v7.widget.CardView>
 
