--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -205,15 +205,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <AutoCompleteTextView
+                    <android.support.design.widget.TextInputEditText
                         android:id="@+id/email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="User"
+                        android:digits="0123456789+"
+                        android:hint="Username (Mobile Number)*"
                         android:imeOptions="actionNext"
-                        android:inputType="textEmailAddress"
+                        android:inputType="phone"
                         android:maxLines="1"
-                        android:maxLength="22"
+                        android:maxLength="10"
                         android:nextFocusForward="@id/password" />
 
                 </android.support.design.widget.TextInputLayout>
