--- a/app/src/main/res/layout/activity_privacy_notice_2.xml
+++ b/app/src/main/res/layout/activity_privacy_notice_2.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/white"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     tools:context=".activities.privacyNoticeActivity.PrivacyNotice_Activity">
 
     <android.support.design.widget.AppBarLayout
@@ -18,10 +18,10 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:title="@string/privacy_notice_title"
-            app:titleTextColor="@color/font_black_0"
             android:background="@color/white"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:title="@string/privacy_notice_title"
+            app:titleTextColor="@color/font_black_0" />
 
     </android.support.design.widget.AppBarLayout>
 
@@ -30,76 +30,52 @@
         android:id="@+id/buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:gravity="center"
         android:orientation="horizontal"
-        android:weightSum="1"
-        android:layout_alignParentBottom="true">
+        android:weightSum="1">
 
-        <RadioGroup
-            android:id="@+id/radio_privacy_grp"
+        <CheckBox
+            android:id="@+id/chb_agree_privacy"
             android:layout_width="0dp"
-            android:layout_weight="0.7"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <RadioButton
-                android:id="@+id/radio_accept"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:fontFamily="@fonts/Lato_Regular"
-                android:text="@string/accept" />
-
-            <RadioButton
-                android:id="@+id/radio_reject"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:fontFamily="@fonts/Lato_Regular"
-                android:layout_marginStart="35dp"
-                android:text="@string/reject"/>
-
-
-        </RadioGroup>
+            android:layout_weight="0.75"
+            android:fontFamily="@fonts/Lato_Regular"
+            android:text="@string/privacy_agree" />
 
         <TextView
             android:id="@+id/txt_privacy"
             android:layout_width="0dp"
-            android:layout_weight="0.2"
             android:layout_height="wrap_content"
-            android:text="@string/next"
-            android:gravity="end"
-            android:drawableEnd="@drawable/ic_keyboard_arrow_right"
-            android:textColor="@color/colorPrimaryDark"
             android:layout_marginVertical="15dp"
-            android:textAlignment="center"
+            android:layout_weight="0.25"
+            android:drawableEnd="@drawable/ic_keyboard_arrow_right"
             android:fontFamily="@fonts/Lato_Regular"
-            android:textSize="16sp"
             android:foreground="?android:attr/selectableItemBackground"
-            android:padding="10dp"/>
+            android:gravity="end"
+            android:padding="10dp"
+            android:text="@string/next"
+            android:textAlignment="center"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="16sp" />
     </LinearLayout>
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/buttons"
         android:layout_below="@+id/actionbar"
-        android:layout_marginBottom="15dp">
-        <!--Scrollable content here-->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/privacy_text"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:textFontWeight="1"
-                android:padding="10dp"
-                android:fontFamily="@fonts/Lato_Regular"
-                android:layout_width="wrap_content"
-                android:layout_marginHorizontal="5dp"
-                android:textAlignment="gravity"/>
-        </LinearLayout>
-    </ScrollView>
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/privacy_text"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginHorizontal="5dp"
+            android:layout_weight="1"
+            android:fontFamily="@fonts/Lato_Regular"
+            android:padding="10dp"
+            android:textAlignment="gravity"
+            android:textFontWeight="1" />
+    </LinearLayout>
 </RelativeLayout>
