--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -74,4 +74,9 @@
         <item name="colorControlHighlight">#FFFFFF</item>
     </style>
 
+
+    <!--Style changes related to the New Figma by venu N-->
+
+
+
 </resources>
