--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="#fcfcff"
     tools:context=".activities.homeActivity.HomeActivity">
 
     <RelativeLayout
@@ -272,16 +272,18 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/sub_header_view"
-
-                    android:background="@color/white"
                     android:orientation="horizontal"
-                    android:padding="10dp">
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    >
 
                     <android.support.v7.widget.CardView
                         android:id="@+id/cardview_button_home_quarantine"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:layout_marginVertical="10dp"
+                        android:layout_marginHorizontal="5dp"
                         app:cardCornerRadius="10dp"
                         app:cardElevation="8dp"
                         app:cardPreventCornerOverlap="false">
@@ -290,12 +292,14 @@
                             android:id="@+id/button_home_quarantine"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:gravity="bottom"
 
                             >
 
                             <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_centerHorizontal="true"
                                 android:src="@drawable/ic_doctor_with_mask">
 
                             </ImageView>
@@ -307,7 +311,8 @@
                         android:id="@+id/cardview_button_educational_videos"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginVertical="10dp"
+                        android:layout_marginHorizontal="5dp"
                         android:layout_weight="1"
                         app:cardCornerRadius="10dp"
                         app:cardElevation="8dp"
@@ -316,12 +321,15 @@
                         <RelativeLayout
                             android:id="@+id/button_educational_videos"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:gravity="bottom">
 
                             <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/ic_doctor_faq" />
+                                android:src="@drawable/ic_doctor_faq"
+                                android:layout_centerHorizontal="true"
+                                />
 
                         </RelativeLayout>
 
