--- a/app/src/main/res/layout/fragment_physical_exam.xml
+++ b/app/src/main/res/layout/fragment_physical_exam.xml
@@ -4,10 +4,6 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="io.intelehealth.client.activities.physical_exam_activity.PhysicalExamActivity$PlaceholderFragment">
 
 
@@ -15,6 +11,7 @@
         android:id="@+id/physical_exam_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:textSize="@dimen/physical_node_title"
         />
 
@@ -28,15 +25,36 @@
         android:paddingBottom="10dp"
         />
 
-    <ExpandableListView
-        android:id="@+id/physical_exam_expandable_list_view"
-        android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:layout_height="0dp"
-        android:clickable="true"
-        android:focusable="true"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    </ExpandableListView>
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="10dp"
+        app:cardCornerRadius="10sp"
+        app:cardElevation="5sp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/white_rectangular_bg"
+            android:layout_marginBottom="10dp"
+            >
+            <ExpandableListView
+                android:id="@+id/physical_exam_expandable_list_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="true"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            </ExpandableListView>
+
+        </RelativeLayout>
+
+
+
+    </android.support.v7.widget.CardView>
+
+
 
 </LinearLayout>
