--- a/app/src/main/res/layout/list_expandable_group.xml
+++ b/app/src/main/res/layout/list_expandable_group.xml
@@ -6,12 +6,13 @@
 
     <TextView
         android:id="@+id/expandable_list_group"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight=".8"
         android:paddingBottom="@dimen/padding_complaint_select"
-        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
         android:paddingTop="@dimen/padding_complaint_select"
+        android:layout_marginLeft="15dp"
+        android:fontFamily="@font/lato_bold"
+        android:includeFontPadding="false"
         android:textSize="@dimen/text_size_complaint" />
 
     <ImageView
@@ -19,6 +20,7 @@
         android:layout_width="wrap_content"
         android:contentDescription="TODO"
         android:layout_height="match_parent"
+        android:visibility="gone"
         android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
