--- a/app/src/main/res/layout/list_expandable_item.xml
+++ b/app/src/main/res/layout/list_expandable_item.xml
@@ -20,11 +20,11 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:focusable="false"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/lato_regular"
         android:textStyle="normal"
-        android:paddingBottom="@dimen/padding_complaint_select"
-        android:paddingTop="@dimen/padding_complaint_select"
-        android:textSize="@dimen/text_size_complaint" />
+        android:paddingBottom="@dimen/padding_identification_screen"
+        android:paddingTop="@dimen/padding_identification_screen"
+        android:textSize="16sp" />
 
 
 </LinearLayout>
